crates/ruff_python_formatter/tests/snapshots/black_compatibility@fmtonoff4.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/simple_cases/fmtonoff4.py
---
## Input

```py
# fmt: off
@test([
    1, 2,
    3, 4,
])
# fmt: on
def f(): pass

@test([
    1, 2,
    3, 4,
])
def f(): pass
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,20 +1,10 @@
 # fmt: off
-@test([
-    1, 2,
-    3, 4,
-])
+@NOT_IMPLEMENTED_call(NOT_IMPLEMENTED_arg)
 # fmt: on
 def f():
     pass
 
 
-@test(
-    [
-        1,
-        2,
-        3,
-        4,
-    ]
-)
+@NOT_IMPLEMENTED_call(NOT_IMPLEMENTED_arg)
 def f():
     pass
```

## Ruff Output

```py
# fmt: off
@NOT_IMPLEMENTED_call(NOT_IMPLEMENTED_arg)
# fmt: on
def f():
    pass


@NOT_IMPLEMENTED_call(NOT_IMPLEMENTED_arg)
def f():
    pass
```

## Black Output

```py
# fmt: off
@test([
    1, 2,
    3, 4,
])
# fmt: on
def f():
    pass


@test(
    [
        1,
        2,
        3,
        4,
    ]
)
def f():
    pass
```


