crates/ruff_python_formatter/tests/snapshots/black_compatibility@fmtskip6.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/simple_cases/fmtskip6.py
---
## Input

```py
class A:
    def f(self):
        for line in range(10):
            if True:
                pass  # fmt: skip
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,5 +1,5 @@
 class A:
     def f(self):
-        for line in range(10):
+        for line in NOT_IMPLEMENTED_call(NOT_IMPLEMENTED_arg):
             if True:
                 pass  # fmt: skip
```

## Ruff Output

```py
class A:
    def f(self):
        for line in NOT_IMPLEMENTED_call(NOT_IMPLEMENTED_arg):
            if True:
                pass  # fmt: skip
```

## Black Output

```py
class A:
    def f(self):
        for line in range(10):
            if True:
                pass  # fmt: skip
```


